sonarqube issue
* added tests